# USACO

./: CMakeLists.txt  README.md
Other/breed/: bcount.py
Other/cowsignal/: cowsignal.cpp
Other/daisy/: daisy.cpp
Other/diamond/: diamond.py
Other/herding/: herding.cpp
Other/liars/: liars.cpp
Other/maxdistance/: maxdistance.cpp
Other/mixmilk/: mixmilk.cpp
Other/pails/: pails.cpp
Other/paint/: paint.out  paint.py
Other/square/: square.out  square.py
Section_1.2/beads/: beads.py
Section_1.2/friday/: friday.py
Section_1.2/gift1/: gift1.py
Section_1.2/ride/: ride.py
