cmake_minimum_required(VERSION 3.24)
project(USACO)

set(CMAKE_CXX_STANDARD 14)

add_executable(USACO
        Other/breed/bcount.in
        Other/breed/bcount.out
        Other/breed/bcount.py
        Other/cowsignal/cowsignal.cpp
        Other/maxdistance/maxdistance.cpp
        Other/mixmilk/mixmilk.cpp
        Other/paint/a.exe
        Other/paint/paint.in
        Other/paint/paint.out
        Other/paint/paint.py
        Other/shell/a.exe
        Other/shell/shell.cpp
        Other/shell/shell.in
        Other/shell/shell.out
        Other/square/square.in
        Other/square/square.out
        Other/square/square.py
        Section_1.2/beads/beads.in
        Section_1.2/beads/beads.out
        Section_1.2/beads/beads.py
        Section_1.2/friday/friday.in
        Section_1.2/friday/friday.out
        Section_1.2/friday/friday.py
        Section_1.2/gift1/gift1.in
        Section_1.2/gift1/gift1.out
        Section_1.2/gift1/gift1.py
        Section_1.2/ride/ride.in
        Section_1.2/ride/ride.out
        Section_1.2/ride/ride.py)
